--- a/Baseline Results/Baseline_results.ipynb
+++ b/Baseline Results/Baseline_results.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "Baseline_results.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -17,7 +18,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -92,7 +93,7 @@
         "id": "LMXxc7Iyuzo-",
         "outputId": "24d1f996-2d49-4870-c040-192de1e4d805"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,7 +128,7 @@
         "id": "kpEZE5B5u3e1",
         "outputId": "0e76c192-5b09-4a32-9604-cf204ddcdc34"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,7 +149,7 @@
       "metadata": {
         "id": "N5elrkQT9Kd7"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -164,7 +165,7 @@
         "id": "De2urWFZ9bzf",
         "outputId": "29054401-feea-447f-8fc4-600d64fe4d13"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -481,7 +482,7 @@
         "id": "OiYHMMEyx1_z",
         "outputId": "658738ce-a4ab-4647-9acf-542a79c77ec9"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -508,7 +509,7 @@
       "metadata": {
         "id": "Fnm3hyL-yBf7"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -524,7 +525,7 @@
         "id": "juQWfYz8H0I3",
         "outputId": "5275c3a1-4c3d-4333-96c9-37e52428afb3"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -850,7 +851,7 @@
       "metadata": {
         "id": "0GzM1RBI_dNr"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -885,7 +886,7 @@
         "id": "VUljLxKDOAwW",
         "outputId": "0cfd52a7-07c0-46c1-fbfb-4dcef7a6c436"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -924,7 +925,7 @@
       "metadata": {
         "id": "wSuHVdgnMhMz"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -958,7 +959,7 @@
         "id": "UcXI0WGeEjPG",
         "outputId": "77769697-c20d-4d0f-da21-1bc92dc17a2c"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -992,7 +993,7 @@
       "metadata": {
         "id": "scWzkhA_vKmd"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1007,7 +1008,7 @@
         "id": "ym0bjkhDAeQz",
         "outputId": "0297703c-9996-4353-88cf-756859d3ac16"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1053,7 +1054,7 @@
         "id": "-8t8TkMzNwod",
         "outputId": "007ed40b-4168-49b9-c6a6-25dcf4128910"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
