--- a/Preprocessing/Tweelink_Articles.ipynb
+++ b/Preprocessing/Tweelink_Articles.ipynb
@@ -18,7 +18,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 1,
       "metadata": {
         "id": "z4H8HrNIgLA-"
       },
@@ -37,6 +37,7 @@
       "source": [
         "#Importing essential libraries\n",
         "import pandas as pd\n",
+        "import re\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
@@ -56,16 +57,17 @@
         "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
         "nltk.download('punkt')\n",
         "nltk.download('stopwords')\n",
-        "nltk.download('corpus')"
+        "nltk.download('corpus')\n",
+        "from nltk.corpus import wordnet as wn"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "PIErUCcHh2xe",
-        "outputId": "c7de5bee-0fb3-4617-e215-5be87030b56a"
+        "outputId": "b610d4dd-712d-4550-80ea-ea8d7ad1ec0d"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -77,16 +79,6 @@
             "[nltk_data]   Package stopwords is already up-to-date!\n",
             "[nltk_data] Error loading corpus: Package 'corpus' not found in index\n"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "False"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 60
         }
       ]
     },
@@ -101,9 +93,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "swJZXLJLkKoc",
-        "outputId": "134f29ea-2111-421f-b061-4ac1d630a1c3"
+        "outputId": "4533cb30-0ae1-4f19-f9ac-09cb3a1c9201"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,7 +113,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 61
+          "execution_count": 40
         }
       ]
     },
@@ -136,9 +128,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3Gajlb9cmjaf",
-        "outputId": "c3dabd6d-cee7-47b2-87e7-d00c03e3673c"
+        "outputId": "2fa79d4a-914c-4550-c082-ae1520157a11"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,18 +144,41 @@
     {
       "cell_type": "code",
       "source": [
-        "#Preprocessing\n",
+        "preprocessed_vocabulary = dict()\n",
         "\n",
         "#Converting to lowercase\n",
         "def to_lower_case(text):\n",
         "  text = text.lower()\n",
         "  return text\n",
         "\n",
+        "def remove_at_word(text):\n",
+        "  data = text.split()\n",
+        "  data = [d for d in data if d[0]!='@']\n",
+        "  text = ' '.join(data)\n",
+        "  return text\n",
+        "\n",
+        "def remove_hashtag(text):\n",
+        "  data = text.split()\n",
+        "  data = [d if (d[0]!='#' or len(d) == 1) else d[1:] for d in data]\n",
+        "  data = [d for d in data if d[0]!='#']\n",
+        "  text = ' '.join(data)\n",
+        "  return text\n",
+        "\n",
+        "def remove_URL(text):\n",
+        "  text = re.sub(r\"http\\S+\", \"\", text)\n",
+        "  text = re.sub(r'bit.ly\\S+', '', text, flags=re.MULTILINE)\n",
+        "  return text\n",
+        "\n",
+        "#Removing stopwords\n",
+        "def remove_stopwords(text):\n",
+        "  stopword = stopwords.words('english')\n",
+        "  new_list = [x for x in text.split() if x not in stopword]\n",
+        "  return ' '.join(new_list)\n",
         "\n",
         "#Removing punctuations\n",
         "def remove_punctuations(text):\n",
         "  punctuations = '''!()-[|]`{};:'\"\\,<>./?@#$=+%^&*_~'''\n",
-        "  new_list = ['' if x in punctuations else x for x in text]\n",
+        "  new_list = ['' if x in punctuations else x for x in text.split()]\n",
         "  new_list_final = []\n",
         "  for token in new_list:\n",
         "    new_token=\"\"\n",
@@ -172,38 +187,38 @@
         "        new_token+=char\n",
         "    if(len(new_token)!=0):\n",
         "      new_list_final.append(new_token)\n",
-        "  return new_list_final\n",
+        "  return ' '.join(new_list_final)\n",
         "\n",
-        "#Removing stopwords\n",
-        "def remove_stopwords(text):\n",
-        "  stopword = stopwords.words('english')\n",
-        "  new_list = [x for x in text if x not in stopword]\n",
-        "  return new_list\n",
-        "  \n",
-        "#Stemming\n",
-        "def stemming(text):\n",
-        "  stemmer = PorterStemmer()\n",
-        "  new_list = [stemmer.stem(x) for x in text]\n",
-        "  return new_list\n",
+        "def remove_non_utf(text):\n",
+        "  text = text.encode('ascii', 'ignore').decode()\n",
+        "  return text\n",
+        "\n",
         "\n",
         "def lemmatization(text):\n",
         "  wordnet_lemmatizer = WordNetLemmatizer()\n",
-        "  new_list = [wordnet_lemmatizer.lemmatize(x) for x in text]\n",
+        "  new_list = [wordnet_lemmatizer.lemmatize(x, pos = wn.synsets(x)[0].pos()) if len(wn.synsets(x)) > 0 else wordnet_lemmatizer.lemmatize(x) for x in text]\n",
         "  return new_list\n",
-        "  \n",
         "\n",
         "#Tokenization\n",
         "def tokenization(text):\n",
         "  return word_tokenize(text)\n",
         "\n",
-        "#Combining all preprocessing steps together for a text\n",
         "def text_preprocess(text):\n",
+        "  #global preprocessed_vocabulary\n",
         "  text = to_lower_case(text)\n",
-        "  text = tokenization(text)\n",
+        "  text = remove_at_word(text)\n",
+        "  text = remove_hashtag(text)\n",
+        "  text = remove_URL(text)\n",
         "  text = remove_stopwords(text)\n",
         "  text = remove_punctuations(text)\n",
-        "  text = [x.strip() for x in text if len(x.strip())]\n",
+        "  text = remove_non_utf(text)\n",
+        "  text = [x.strip() for x in text.split() if len(x.strip())]\n",
         "  text = lemmatization(text)\n",
+        "  for token in text:\n",
+        "    if token in preprocessed_vocabulary.keys():\n",
+        "      preprocessed_vocabulary[token] += 1\n",
+        "    else:\n",
+        "      preprocessed_vocabulary[token] = 1\n",
         "  return text\n",
         "\n",
         "def data_preprocess(data):\n",
@@ -212,7 +227,7 @@
       "metadata": {
         "id": "4yZ5WlnOiJSG"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -240,7 +255,7 @@
         "            key1 = rows['Base Hashtag']\n",
         "            key2 = rows['S. No.']\n",
         "            filename = key1+\"_\"+key2\n",
-        "            filepath = \"/content/drive/MyDrive/Tweelink_Articles/\"+filename+\".json\"\n",
+        "            filepath = \"/content/drive/MyDrive/IR/Tweelink_Articles/\"+filename+\".json\"\n",
         "            jsonfile = open(filepath, 'w')\n",
         "            json.dump(sliced_o, jsonfile)\n",
         "           \n",
@@ -251,7 +266,7 @@
       "metadata": {
         "id": "0UwoLLtQgh-j"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -287,7 +302,7 @@
         "            sliced_o['Body_processed'] = text_preprocess(sliced_o['Body_processed'])\n",
         "           \n",
         "            filename = key1+\"_\"+key2\n",
-        "            filepath = \"/content/drive/MyDrive/Tweelink_Articles_Processed/\"+filename+\".json\"\n",
+        "            filepath = \"/content/drive/MyDrive/IR/Tweelink_Articles_Processed/\"+filename+\".json\"\n",
         "            jsonfile = open(filepath, 'w')\n",
         "            json.dump(sliced_o, jsonfile)\n",
         "  \n",
@@ -298,29 +313,29 @@
       "metadata": {
         "id": "DYyuEtOZi3RM"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "make_json(\"/content/drive/MyDrive/Tweelink_Articles/Hashtags and Article Database - Aryan.csv\")"
+        "make_json(\"Hashtags and Article Database - Aryan.csv\")"
       ],
       "metadata": {
         "id": "yNDaipksH39e"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "make_json_preprocessed(\"/content/drive/MyDrive/Tweelink_Articles/Hashtags and Article Database - Aryan.csv\")"
+        "make_json_preprocessed(\"Hashtags and Article Database - Aryan.csv\")"
       ],
       "metadata": {
         "id": "EjK3jYFqnUlG"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -331,13 +346,13 @@
         "print(data)"
       ],
       "metadata": {
+        "id": "V4nu3pMhpYVy",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "V4nu3pMhpYVy",
-        "outputId": "610546a5-2343-4839-ea32-bbd8a90e611b"
+        "outputId": "e3ff2317-d278-46a2-b890-49159e83c3bc"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
